--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5.90.7",
     "aos": "^2.3.4",
@@ -18,7 +19,9 @@
     "firebase": "^12.5.0",
     "flowbite": "^4.0.1",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.552.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
