--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5.90.7",
     "aos": "^2.3.4",
